--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@
 }
 
 body {
-  background: #FCFFCC;
+  background: #fffceb;
   color: #333;
 }
 
@@ -548,7 +548,7 @@ body {
 }
 
 .card {
-  background:#FCFFCC;
+  background: #ffffff;
   border-radius: 16px;
   padding: 35px 20px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
@@ -563,7 +563,6 @@ body {
 .card .icon {
   font-size: 2.8rem;
   margin-bottom: 10px;
-  
   color: #e63946;
   transition: transform 0.3s ease;
 }
@@ -631,3 +630,4 @@ body {
     font-size: 2.8rem;
   }
 }
+
